# LLM_Agent_Financial_Assistant

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
ConvFinQA/: __init__.py
ConvFinQA/data_handler/: __init__.py  data_extractor.py
ConvFinQA/llms/: agent.py  agent_builder.py  agent_tools.py  prompt_templates.py
ConvFinQA_LLM_Project/: .pre-commit-config.yaml
ConvFinQA_LLM_Project/data_handler/: data_handler.py
data/: test_private.json
results/: metrics_claude-3-5-sonnet-20241022_few-shot-CoT_20250415_025123.json  metrics_claude-3-5-sonnet-20241022_json-chat_20250415_025709.json  metrics_claude-3-5-sonnet-20241022_react_20250415_025430.json  metrics_claude-3-7-sonnet-20250219_json-chat_20250415_015116.json  metrics_gemini-2.0-flash_few-shot-CoT_20250415_023729.json  metrics_gemini-2.0-flash_json-chat_20250415_015330.json  metrics_gemini-2.0-flash_react_20250415_015255.json  metrics_gpt-4o_few-shot-CoT_20250415_014254.json  metrics_gpt-4o_json-chat_20250415_013957.json  metrics_gpt-4o_react_20250415_013821.json
src/: __init__.py  demo.ipynb  main.py  warnings_config.py
src/agent/: __init__.py  agent.py  agent_builder.py  agent_tools.py  chat.py  instant_answer.py  prompt_templates.py
src/metrics/: __init__.py  accuracy.py  compute_metrics.py  llm_as_a_judge.py
src/utils/: __init__.py  data_extractor.py
test/: integration_test.py  test_agent_builder.py  test_agent_tools.py  test_chat_function.py  test_data_handler.py  test_direct_answer.py  test_llm_as_a_judge.py  test_measure_accuracy.py  test_prompt_selector.py  test_utils.py
(+1 files in other folders)
